--- a/package.json
+++ b/package.json
@@ -1,59 +1,26 @@
 {
   "name": "eleven-cli",
   "version": "1.0.0",
-  "description": "Eleven - Your Personal AI Assistant CLI | Chat, Code, Create with Gemini AI",
-  "main": "bin/eleven.js",
+  "description": "Eleven CLI — personal Gemini-powered AI assistant",
   "bin": {
-    "eleven-cli": "./bin/eleven.js",
-    "eleven": "./bin/eleven.js",
     "el": "./bin/eleven.js"
   },
   "scripts": {
-    "start": "node bin/eleven.js",
-    "install-global": "npm install -g .",
-    "uninstall-global": "npm uninstall -g eleven-cli",
-    "test": "node bin/eleven.js --help",
-    "test:config": "node bin/eleven.js config --show",
-    "test:health": "node bin/eleven.js health",
-    "dev": "node bin/eleven.js",
-    "link": "npm link",
-    "unlink": "npm unlink",
-    "setup": "chmod +x bin/eleven.js && npm link"
+    "start": "node ./bin/eleven.js",
+    "lint": "eslint . || true"
+  },
+  "engines": {
+    "node": ">=18"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.15.0",
-    "chalk": "^4.1.2",
-    "commander": "^11.0.0",
-    "inquirer": "^8.2.6",
-    "link": "^2.1.1",
-    "ora": "^5.4.1"
+    "@google/generative-ai": "^0.1.0",
+    "commander": "^10.0.0",
+    "inquirer": "^9.0.0",
+    "fs-extra": "^11.1.1",
+    "chalk": "^5.0.0",
+    "prompts": "^3.0.0",
+    "ora": "^6.1.2",
+    "retry": "^0.14.0"
   },
-  "keywords": [
-    "ai",
-    "cli",
-    "assistant",
-    "gemini",
-    "personal-assistant",
-    "slythnox",
-    "code-generation",
-    "automation",
-    "chat",
-    "developer-tools",
-    "productivity"
-  ],
-  "author": "Slythnox",
-  "license": "MIT",
-  "engines": {
-    "node": ">=16.0.0"
-  },
-  "preferGlobal": true,
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/slythnox/eleven-cli.git"
-  },
-  "files": [
-    "bin/",
-    "src/",
-    "README.md"
-  ]
+  "license": "MIT"
 }
